--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -4,8 +4,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fff;
-  color: #000;
+  background-color: var(--background-color);
+  color: var(--dark);
   font-size: 100%;
 }
 
@@ -31,58 +31,6 @@ body {
 #wrapper {
   display: flex;
   flex-direction: column;
-  /* setting min-height during developement */
-  // min-height: 2000px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-heading);
-  letter-spacing: -0.025em;
-  overflow-wrap: break-word;
-  word-break: break-word;
-  line-height: 1.075;
-}
-
-h1,
-h2 {
-  font-weight: 600;
-}
-
-h3,
-h4,
-h5 {
-  font-weight: 500;
-}
-
-h1 {
-  font-size: 4rem;
-  margin: 0 0 1.5rem;
-
-  @media (max-width: 1023px) {
-    font-size: 3rem;
-  }
-
-  @media (max-width: 767px) {
-    font-size: 2.75rem;
-  }
-}
-
-h2 {
-  font-size: 3rem;
-  margin: 0 0 1.25rem;
-
-  @media (max-width: 1023px) {
-    font-size: 2.5rem;
-  }
-
-  @media (max-width: 767px) {
-    font-size: 2.125rem;
-  }
 }
 
 hr {
