--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,4 +1,4 @@
-$font-heading: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+$font-display: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
   "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 $font-text: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
   "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -20,7 +20,7 @@ $border-radius-max: 999px;
 $border-radius-round: 50%;
 
 :root {
-  --font-heading: #{$font-heading};
+  --font-display: #{$font-display};
   --font-text: #{$font-text};
 
   --header-height: #{$header-height};
