--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -1,11 +1,10 @@
 .footer {
   margin-top: auto;
   background-color: var(--light-2);
-  padding: 4rem 0 2.5rem;
 }
 
 .content {
-  padding: 0 var(--horizontal-padding);
+  padding: 4rem var(--horizontal-padding) 2.5rem;
   max-width: var(--max-width);
   margin: 0 auto;
 }
