--- a/components/Header/Navigation/styles.module.scss
+++ b/components/Header/Navigation/styles.module.scss
@@ -24,6 +24,13 @@ $bp: 1023px;
 
   & > li {
     width: 100%;
+    &:not(:last-child) {
+      margin-right: 2.5rem;
+
+      @media (max-width: $bp) {
+        margin-right: 0;
+      }
+    }
     & > a {
       font-size: 1.025rem;
       font-weight: 500;
@@ -45,14 +52,6 @@ $bp: 1023px;
       border-top: 1px solid var(--light-5);
     }
 
-    &:not(:last-child) {
-      margin-right: 2.5rem;
-
-      @media (max-width: $bp) {
-        margin-right: 0;
-      }
-    }
-
     a {
       display: flex;
       justify-content: center;
@@ -67,7 +66,7 @@ $bp: 1023px;
 }
 
 .isSubmenu {
-  a {
+  & > a {
     cursor: default;
     @media (max-width: $bp) {
       cursor: pointer;
@@ -141,7 +140,7 @@ $bp: 1023px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0.75rem 0;
+  padding: 1rem;
   min-width: 17rem;
   margin-top: 0.75rem;
   background-color: var(--light);
@@ -172,24 +171,73 @@ $bp: 1023px;
   li {
     margin-right: 0;
     width: 100%;
+  }
 
-    a {
-      justify-content: flex-start;
-      cursor: pointer;
-      font-size: 0.95rem;
-      padding: 0.75rem 1.65rem;
-      width: 100%;
-      background-color: var(--light);
-      transition: background-color 0.2s;
-
-      &:hover {
-        background-color: var(--light-3);
-      }
-
-      @media (max-width: $bp) {
-        padding: 0.75rem 1rem;
-      }
+  &.col-2 {
+    min-width: inherit;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    & > li {
+      min-width: 15rem;
     }
+    @media (max-width: $bp) {
+      display: flex;
+      gap: 0;
+    }
+  }
+  &.col-3 {
+    min-width: inherit;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.5rem;
+    & > li {
+      min-width: 15rem;
+    }
+    @media (max-width: $bp) {
+      display: flex;
+      gap: 0;
+    }
+  }
+}
+
+.link {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  line-height: 1.3;
+  padding: 1rem;
+  border-radius: var(--border-radius-medium);
+  width: 100%;
+  background-color: var(--light);
+  transition: background-color 0.2s;
+
+  &:hover {
+    background-color: var(--light-2);
+  }
+
+  @media (max-width: $bp) {
+    padding: 0.75rem 0.5rem;
+  }
+
+  .linkIcon {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+  }
+
+  .linkTitle {
+    display: block;
+    font-size: 0.9rem;
+    margin-bottom: 0.2rem;
+    font-weight: 500;
+  }
+
+  .linkDescription {
+    display: block;
+    opacity: 0.5;
+    font-size: 0.85rem;
   }
 }
 
