--- a/blocks/HelpBanner/styles.module.scss
+++ b/blocks/HelpBanner/styles.module.scss
@@ -15,6 +15,7 @@ $bp: 812px;
   overflow: hidden;
   border-radius: var(--border-radius-medium);
   box-shadow: var(--shadow-medium);
+  transform: translate3d(0, 0, 0);
 
   @media (max-width: $bp) {
     flex-direction: column;
