--- a/components/Header/Navigation/styles.module.scss
+++ b/components/Header/Navigation/styles.module.scss
@@ -1,4 +1,5 @@
 $bp: 1023px;
+$bp-min: $bp + 1px;
 $submenu-translation-y: -0.85rem;
 $submenu-translation-x: 4rem;
 $submenu-translation-x-last: 8rem;
@@ -76,19 +77,6 @@ $submenu-rotation-x: -20deg;
     @media (max-width: $bp) {
       cursor: pointer;
     }
-
-    @media (hover: hover) {
-      &:hover {
-        & + div {
-          opacity: 1;
-          pointer-events: auto;
-          transform: translate3d(calc(-50% + #{$submenu-translation-x}), #{$submenu-translation-y}, 0) rotateX(0deg);
-          @media (max-width: $bp) {
-            transform: translate3d(0, 0, 0) rotateX(0deg);
-          }
-        }
-      }
-    }
   }
 
   .chevDown {
@@ -115,17 +103,7 @@ $submenu-rotation-x: -20deg;
   transform: translate3d(calc(-50% + #{$submenu-translation-x}), #{$submenu-translation-y}, 0)
     rotateX(#{$submenu-rotation-x});
 
-  transition: opacity 0.5s, transform 0.5s ease, max-height 0.35s ease;
-
-  &:hover {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate3d(calc(-50% + #{$submenu-translation-x}), #{$submenu-translation-y}, 0) rotateX(0deg);
-
-    @media (max-width: $bp) {
-      transform: translate3d(0, 0, 0) rotateX(0deg);
-    }
-  }
+  transition: opacity 0.25s, transform 0.25s ease, max-height 0.35s ease;
 
   @media (max-width: $bp) {
     position: relative;
@@ -140,6 +118,21 @@ $submenu-rotation-x: -20deg;
   }
 }
 
+.isSubmenu.hovered {
+  .submenuContainer {
+    opacity: 1;
+    pointer-events: auto;
+    transition: opacity 0.5s, transform 0.5s ease, max-height 0.35s ease;
+    transform: translate3d(calc(-50% + #{$submenu-translation-x}), #{$submenu-translation-y}, 0) rotateX(0deg);
+
+    @media (max-width: $bp) {
+      left: inherit;
+      right: inherit;
+      transform: translate3d(0, 0, 0) rotateX(0deg);
+    }
+  }
+}
+
 /* Last Menu Item */
 .menu {
   & > li:last-child {
@@ -149,36 +142,8 @@ $submenu-rotation-x: -20deg;
       transform: translate3d(#{$submenu-translation-x-last}, #{$submenu-translation-y}, 0)
         rotateX(#{$submenu-rotation-x});
 
-      &:hover {
-        opacity: 1;
-        pointer-events: auto;
-        transform: translate3d(#{$submenu-translation-x-last}, #{$submenu-translation-y}, 0) rotateX(0deg);
-
-        @media (max-width: $bp) {
-          transform: translate3d(0, 0, 0) rotateX(0deg);
-        }
-      }
-
       @media (max-width: $bp) {
-        right: inherit;
-        transform: translate3d(0, 0, 0) rotateX(0deg);
-      }
-    }
-
-    &.isSubmenu {
-      & > a {
-        @media (hover: hover) {
-          &:hover {
-            & + div {
-              opacity: 1;
-              pointer-events: auto;
-              transform: translate3d(#{$submenu-translation-x-last}, #{$submenu-translation-y}, 0) rotateX(0deg);
-              @media (max-width: $bp) {
-                transform: translate3d(0, 0, 0) rotateX(0deg);
-              }
-            }
-          }
-        }
+        transform: translate3d(0, 0, 0) rotateX(0);
       }
     }
 
@@ -187,6 +152,16 @@ $submenu-rotation-x: -20deg;
         left: inherit;
         right: 0;
         transform: translate3d(calc(-#{$submenu-translation-x-last} - 3.5rem), 0, 0);
+      }
+    }
+
+    &.isSubmenu.hovered {
+      .submenuContainer {
+        transform: translate3d(#{$submenu-translation-x-last}, #{$submenu-translation-y}, 0) rotateX(0);
+
+        @media (max-width: $bp) {
+          transform: translate3d(0, 0, 0) rotateX(0);
+        }
       }
     }
   }
