--- a/blocks/HelpBanner/styles.module.scss
+++ b/blocks/HelpBanner/styles.module.scss
@@ -4,9 +4,7 @@ $bp: 812px;
 }
 
 .helpContainer {
-  max-width: var(--max-width);
-  margin: 0 auto;
-  padding: 4rem var(--horizontal-padding);
+  padding: 4rem 0;
 }
 
 .help {
