--- a/blocks/Hero/styles.module.scss
+++ b/blocks/Hero/styles.module.scss
@@ -1,7 +1,8 @@
+$bp: 1440px;
 $bp-1: 1086px;
 
-.container {
-  padding: 0rem var(--horizontal-padding) 6rem;
+.hero {
+  padding: 1.5rem var(--horizontal-padding) calc(var(--vertical-padding) + 4rem);
   max-width: var(--max-width);
   margin: 0 auto;
   display: grid;
@@ -9,10 +10,14 @@ $bp-1: 1086px;
   gap: 0 3rem;
   align-items: center;
 
+  @media (max-width: $bp) {
+    padding: 0rem var(--horizontal-padding) calc(var(--vertical-padding) + 4rem);
+  }
+
   @media (max-width: $bp-1) {
     grid-template-columns: 1fr !important;
     gap: 3rem 0;
-    padding: 3rem var(--horizontal-padding) 4rem;
+    padding: 3rem var(--horizontal-padding) calc(var(--vertical-padding) + 2rem);
   }
 
   /* Content (Text + CTAs) */
@@ -33,11 +38,11 @@ $bp-1: 1086px;
       span {
         display: inline-flex;
         padding: 0.35rem 1rem;
-        color: var(--main-color);
+        color: var(--badge-color);
         font-weight: 700;
         font-size: 0.95rem;
         text-transform: uppercase;
-        background-color: var(--main-color-light-7);
+        background-color: var(--main-color-light-8);
         border-radius: var(--border-radius-medium);
       }
     }
