--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -1,4 +1,5 @@
 $bp: 1023px;
+$bp-menu-tablet: 1150px;
 
 .header {
   z-index: 99;
@@ -14,25 +15,25 @@ $bp: 1023px;
   align-items: center;
   height: var(--header-height);
   background-color: var(--light);
-  border-width: 1px;
-  border-style: solid;
-  border-color: transparent;
-  transition: height 0.1s linear, border-color 0s;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: transparent;
+  transition: height 0.1s linear, border-bottom-color 0s;
 }
 
 .scrolled {
   .outerContainer {
     background-color: var(--light);
-    border-color: var(--light-5);
+    border-bottom-color: var(--light-5);
     height: var(--header-height-scrolled);
-    transition: height 0.2s linear, border-color 0s 0s;
+    transition: height 0.2s linear, border-bottom-color 0s 0s;
   }
 }
 
 .open {
   .outerContainer {
-    border-color: transparent;
-    transition: height 0.2s linear, border-color 0s 0s;
+    border-bottom-color: transparent;
+    transition: height 0.2s linear, border-bottom-color 0s 0s;
   }
 }
 
@@ -60,7 +61,7 @@ $bp: 1023px;
     left: 0;
     right: 0;
     bottom: 0;
-    padding-bottom: 4rem;
+    padding-bottom: 10rem;
     background-color: var(--light);
 
     transform: translate3d(0, -100%, 0);
@@ -113,25 +114,69 @@ $bp: 1023px;
   }
 }
 
-.button {
-  height: 38px !important;
-  font-size: 1rem;
+.buttons {
+  flex: 0;
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr;
 
   @media (max-width: $bp) {
-    display: none !important;
-    order: -1;
-    color: var(--main-color);
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    opacity: 1;
-    transition: opacity 0.2s;
+    z-index: 1;
+    position: fixed;
+    gap: 0.75rem;
+    grid-template-columns: 1fr;
+    bottom: 0;
+    padding-bottom: 1.75rem;
+    left: var(--horizontal-padding);
+    right: var(--horizontal-padding);
 
-    &:hover {
-      color: var(--main-color);
-      background-color: transparent;
+    transform: translate3d(0, 100%, 0);
+    opacity: 0;
+    pointer-events: none;
+    transition: transform 0.5s ease, opacity 0.5s;
+  }
+
+  .button {
+    height: 38px !important;
+    font-size: 1rem;
+    padding: 0 1.35rem;
+
+    @media (max-width: $bp-menu-tablet) {
+      padding: 0 0.825rem;
+    }
+    @media (max-width: $bp) {
+      height: 46px !important;
+    }
+  }
+
+  .loginButton {
+    @media (min-width: #{$bp + 1px}) {
       border: none;
-      opacity: 0.75;
+      padding: 0 1rem;
+      color: var(--main-color);
+      opacity: 1;
+      transition: opacity 0.2s;
+
+      @media (max-width: $bp-menu-tablet) {
+        padding: 0 0.75rem;
+      }
+
+      @media (hover: hover) {
+        &:hover {
+          opacity: 0.55;
+        }
+      }
+    }
+  }
+}
+
+.open {
+  .buttons {
+    @media (max-width: $bp) {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+      pointer-events: auto;
+      transition: transform 0.5s 0.15s ease, opacity 0.5s;
     }
   }
 }
