--- a/blocks/Section/styles.module.scss
+++ b/blocks/Section/styles.module.scss
@@ -14,6 +14,7 @@ $skew-angle: 5deg;
 
   .content {
     z-index: 1;
+    width: 100%;
     max-width: var(--max-width);
     margin: 0 auto;
     padding: 0 var(--horizontal-padding);
