--- a/components/Footer/Navigation/styles.module.scss
+++ b/components/Footer/Navigation/styles.module.scss
@@ -1,7 +1,7 @@
 .navigation {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  gap: 2.75rem;
+  gap: 2.8rem;
 }
 
 .menu {
@@ -15,12 +15,13 @@
 
   ul {
     list-style: none;
-    font-size: 1rem;
+    font-size: 0.95rem;
+    line-height: 1.3;
 
     li {
       a {
         display: block;
-        margin: 0.65rem 0;
+        margin: 0.925rem 0;
         color: inherit;
         opacity: 0.6;
         transition: opacity 0.2s;
