--- a/blocks/Tabs/Tab/styles.module.scss
+++ b/blocks/Tabs/Tab/styles.module.scss
@@ -29,5 +29,34 @@
 [data-alignment="center"] {
   .tab {
     position: relative;
+
+    & > *:first-child {
+      margin-top: 0;
+      padding-top: 0;
+    }
+
+    & > *:last-child {
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
+  }
+}
+
+[data-alignment="left"],
+[data-alignment="right"] {
+  @media (max-width: 900px) {
+    .tab {
+      position: relative;
+
+      & > *:first-child {
+        margin-top: 0;
+        padding-top: 0;
+      }
+
+      & > *:last-child {
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+    }
   }
 }
