--- a/blocks/TextWithImage/styles.module.scss
+++ b/blocks/TextWithImage/styles.module.scss
@@ -1,8 +1,9 @@
 $bp-1: 1023px;
 
 .container {
-  padding: 5rem 0;
+  padding: 3rem 0;
   display: grid;
+  align-items: center;
   grid-template-columns: 35% 1fr;
   gap: 0 3rem;
 
@@ -58,17 +59,33 @@ $bp-1: 1023px;
     }
 
     .buttons {
+      $button-bp: 500px;
       list-style: none;
       display: flex;
+      flex-wrap: wrap;
       margin-top: 2rem;
 
       @media (max-width: $bp-1) {
         justify-content: center;
       }
+      @media (max-width: $button-bp) {
+        flex-direction: column;
+        width: 100%;
+      }
 
       .button {
         &:not(:last-child) {
           margin-right: 1.25rem;
+          @media (max-width: $button-bp) {
+            margin-right: 0;
+            margin-bottom: 1rem;
+          }
+        }
+
+        a {
+          @media (max-width: $button-bp) {
+            width: 90%;
+          }
         }
       }
     }
@@ -76,22 +93,24 @@ $bp-1: 1023px;
 
   /* Illustration */
   .illustration {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--light-4);
-    min-height: 250px;
+    width: 100%;
+
+    svg {
+      max-height: 90vh;
+    }
 
     @media (max-width: $bp-1) {
       justify-self: center;
       width: 100%;
       max-width: 55rem;
-    }
-
-    &::before {
-      content: "Illustration Placeholder";
-      position: absolute;
-      color: var(--light-8);
+      height: inherit;
+      svg {
+        max-height: 25rem;
+      }
     }
   }
 
