generalized slider component, added Feature Slider, added Grid Component, added Feature Block, icon updates, various design optimizations

--- a/components/IconWrapper/styles.module.scss
+++ b/components/IconWrapper/styles.module.scss
@@ -17,3 +17,13 @@
     fill: var(--main-color);
   }
 }
+
+[data-theme="main"],
+[data-theme="dark"] {
+  .wrapper {
+    svg,
+    g {
+      fill: #fff;
+    }
+  }
+}
