--- a/components/Footer/Navigation/styles.module.scss
+++ b/components/Footer/Navigation/styles.module.scss
@@ -1,7 +1,18 @@
+$bp-1: 1000px;
+$bp-2: 550px;
+
 .navigation {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  gap: 2.8rem;
+  grid-template-columns: repeat(6, auto);
+  justify-content: space-between;
+  gap: 2.5rem;
+
+  @media (max-width: $bp-1) {
+    grid-template-columns: repeat(3, auto);
+  }
+  @media (max-width: $bp-2) {
+    grid-template-columns: repeat(2, auto);
+  }
 }
 
 .menu {
@@ -24,6 +35,9 @@
         margin: 0.925rem 0;
         color: inherit;
         opacity: 0.6;
+        hyphens: auto;
+        overflow: hidden;
+        text-overflow: ellipsis;
         transition: opacity 0.2s;
 
         @media (hover: hover) {
