--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -1,3 +1,5 @@
+$bp: 900px;
+
 .footer {
   margin-top: auto;
   background-color: var(--light-2);
@@ -14,6 +16,19 @@
   justify-content: space-between;
   align-items: center;
 
+  @media (max-width: $bp) {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    & > *:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+    & > *:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   .logo {
     width: 12rem;
     object-fit: contain;
@@ -25,5 +40,6 @@
 
   .copyright {
     color: var(--dark-5);
+    line-height: 1.3;
   }
 }
