--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -140,6 +140,7 @@ $bp-menu-tablet: 1150px;
     height: 38px !important;
     font-size: 1rem;
     padding: 0 1.35rem;
+    overflow: inherit;
 
     @media (max-width: $bp-menu-tablet) {
       padding: 0 0.825rem;
