--- a/blocks/Hero/styles.module.scss
+++ b/blocks/Hero/styles.module.scss
@@ -52,6 +52,10 @@ $bp-1: 1086px;
       }
     }
 
+    .typewriter {
+      color: var(--main-color);
+    }
+
     .description {
       font-size: 1.35rem;
       line-height: 1.7;
