--- a/blocks/TextWithImage/styles.module.scss
+++ b/blocks/TextWithImage/styles.module.scss
@@ -115,6 +115,7 @@ $bp-1: 1023px;
   }
 
   .image {
+    z-index: -1;
     position: relative;
     display: flex;
     justify-content: center;
@@ -130,12 +131,21 @@ $bp-1: 1023px;
       width: 90%;
       object-fit: contain;
       object-position: center;
+      box-shadow: var(--shadow-medium);
     }
 
     .background {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+
       .fancy {
         position: absolute;
         pointer-events: none;
+        animation: shrink 1.5s ease-in-out infinite alternate;
 
         &:nth-child(1) {
           top: -5rem;
@@ -145,6 +155,7 @@ $bp-1: 1023px;
           padding: 1.5rem;
           border: 1px solid var(--main-color-light-3);
           border-radius: var(--border-radius-round);
+          animation-delay: 0s;
 
           .inner {
             width: 100%;
@@ -164,13 +175,12 @@ $bp-1: 1023px;
         }
         &:nth-child(2) {
           bottom: -5rem;
-          left: 50%;
-          transform: translateX(-52%);
           width: 25rem;
           height: 25rem;
           padding: 2rem;
           border: 1px solid var(--main-color-light-4);
           border-radius: var(--border-radius-round);
+          animation-delay: 0.3s;
 
           .inner {
             width: 100%;
@@ -184,7 +194,6 @@ $bp-1: 1023px;
             width: 15rem;
             height: 15rem;
             padding: 1.5rem;
-            transform: translateX(0);
             left: inherit;
             right: -2rem;
             bottom: -3rem;
@@ -198,6 +207,7 @@ $bp-1: 1023px;
           padding: 1.5rem;
           border: 1px solid var(--main-color-light-2);
           border-radius: var(--border-radius-round);
+          animation-delay: 0.6s;
 
           .inner {
             width: 100%;
@@ -243,5 +253,14 @@ $bp-1: 1023px;
         max-width: 50rem;
       }
     }
+  }
+}
+
+@keyframes shrink {
+  from {
+    transform: scale(1) translate3d(0, 0, 0);
+  }
+  to {
+    transform: scale(0.945) translate3d(0, 0, 0);
   }
 }
