--- a/forms/Application/styles.module.scss
+++ b/forms/Application/styles.module.scss
@@ -3,12 +3,21 @@
   margin: 0.175rem auto;
   width: 100%;
   max-width: 45rem;
-  padding: 2rem 3rem;
+  padding: 3rem;
   box-shadow: var(--shadow-medium);
   border-radius: var(--border-radius-large);
 
-  &:not(:last-child) {
-    margin-bottom: 2rem;
+  @media (max-width: 500px) {
+    padding: 2.5rem 1.75rem;
+  }
+
+  & > *:first-child {
+    margin-top: 0;
+    padding-top: 0;
+  }
+  & > *:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
   & > div {
@@ -49,4 +58,8 @@
       }
     }
   }
+}
+
+.password {
+  display: none !important;
 }
