--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -135,7 +135,7 @@ $shadow-small-dark: 0 0 12px rgba(255, 255, 255, 0.075);
 $shadow-medium-dark: 0 0 24px rgba(255, 255, 255, 0.1);
 $shadow-large-dark: 0 0 64px rgba(255, 255, 255, 0.15);
 
-[data-theme="dark"] {
+[data-mode="dark"] {
   /* Background */
   --background-color: #{$background-color-dark};
 
